--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-repository: danbeeai/document
+repository: free5pen/free5pen.github.io
 
 output: web
 # this property is useful for conditional filtering of content that is separate from the PDF.
@@ -12,7 +12,7 @@ site_title: DAP Chatbot Document
 company_name: LG CNS.
 # this appears in the footer
 
-github_editme_path: danbeeai/document/blob/gh-pages/
+github_editme_path: free5pen/free5pen.github.io/
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 # gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
